# ofs2.old

./: .gitignore  CMakeLists.txt  README.md
scripts/: Sol.sso
shaders/: demo-tex1-fs.glsl  demo-tex1-vs.glsl  demo1-fs.glsl  demo1-vs.glsl  line-fs.glsl  line-vs.glsl  planet-fs.glsl  planet-vs.glsl  star-fs.glsl  star-vs.glsl  text-fs.glsl  text-vs.glsl
src/: CMakeLists.txt
src/engine/: engine.cpp  engine.h  headup.cpp  headup.h  object.cpp  object.h  player.cpp  player.h  ucs.cpp  ucs.h
src/ephem/: elp-mpp02.cpp  elp-mpp02.h  elp2000.cpp  elp2000.h  iau-wgccre.cpp  iau.cpp  orbit.cpp  orbit.h  precession.cpp  precession.h  rotation.cpp  rotation.h  vsop87.cpp  vsop87.h  vsop87ear.cpp  vsop87jup.cpp  vsop87mar.cpp  vsop87mer.cpp  vsop87nep.cpp  vsop87sat.cpp  vsop87ura.cpp  vsop87ven.cpp
src/font/: font.h  ttf.cpp  ttf.h
src/main/: core.h  coreapp.cpp  coreapp.h  date.cpp  date.h  main.cpp  math.h  view.cpp  view.h
src/main/glfw/: main.cpp
src/main/sdl2/: coreapp.cpp  coreapp.h  main.cpp
src/render/: context.cpp  context.h  demo.cpp  elevation.cpp  elevation.h  headup.cpp  loader.cpp  mesh.cpp  mesh.h  object.cpp  object.h  overlay.cpp  overlay.h  planet.cpp  planet.h  render.cpp  render.h  starcolors.cpp  starcolors.h  stars.cpp  stars.h  system.cpp  terrain.cpp  terrain.h  text.cpp  text.h
src/render/gl/: buffer.cpp  buffer.h  context.cpp  context.h  dds.h  font.cpp  font.h  shader.cpp  shader.h  text.cpp  text.h  texture.cpp  texture.h
src/tools/vsop/: CMakeLists.txt  vsop87sph.cpp
src/universe/: asterisms.cpp  asterisms.h  astro.cpp  astro.h  body.cpp  body.h  frame.cpp  frame.h  frameo.cpp  frameo.h  handler.h  hygdata.h  star.cpp  star.h  starlib.cpp  starlib.h  startree.cpp  startree.h  system.cpp  system.h  timeline.cpp  timeline.h  universe.cpp  universe.h  xhipdata.h
src/util/: color.h  fix128.cpp  fix128.h  tree.cpp  tree.h
